--- a/testimonial-slider-v1/style.css
+++ b/testimonial-slider-v1/style.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 html {
@@ -9,24 +12,25 @@ html {
 }
 
 body {
-  font-family: "Sen", sans-serif;
-  min-height: 100vh;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
+  width: 100%;
   background-image: radial-gradient(
       at 40% 20%,
-      hsla(28, 100%, 74%, 1) 0px,
+      rgb(255, 184, 122) 0px,
       transparent 50%
     ),
-    radial-gradient(at 80% 0%, hsla(189, 100%, 56%, 1) 0px, transparent 50%),
-    radial-gradient(at 0% 50%, hsla(355, 100%, 93%, 1) 0px, transparent 50%),
-    radial-gradient(at 80% 50%, hsla(340, 100%, 76%, 1) 0px, transparent 50%),
-    radial-gradient(at 0% 100%, hsla(22, 100%, 77%, 1) 0px, transparent 50%),
-    radial-gradient(at 80% 100%, hsla(242, 100%, 70%, 1) 0px, transparent 50%),
-    radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0px, transparent 50%);
+    radial-gradient(at 80% 0%, rgb(31, 221, 255) 0px, transparent 50%),
+    radial-gradient(at 0% 50%, rgb(255, 219, 222) 0px, transparent 50%),
+    radial-gradient(at 80% 50%, rgb(255, 133, 173) 0px, transparent 50%),
+    radial-gradient(at 0% 100%, rgb(255, 181, 138) 0px, transparent 50%),
+    radial-gradient(at 80% 100%, rgb(107, 102, 255) 0px, transparent 50%),
+    radial-gradient(at 0% 0%, rgb(255, 133, 167) 0px, transparent 50%);
+  background-repeat: no-repeat;
 }
 
 main {
@@ -35,9 +39,9 @@ main {
 
 main h1 {
   text-align: center;
-  font-size: 40px;
+  font-size: clamp(2rem, 4vw, 2.6rem);
   color: #fff;
-  margin-bottom: 5rem;
+  margin-bottom: 70px;
 }
 
 .slide-row {
@@ -47,50 +51,55 @@ main h1 {
 }
 
 .slide-col {
+  position: relative;
   width: 800px;
   height: 400px;
-  position: relative;
 }
 
-.user-img {
+.hero {
   position: absolute;
   top: 0;
   right: 0;
   height: 100%;
 }
 
-.user-img img {
+.hero img {
   height: 100%;
   border-radius: 10px;
   width: 320px;
   object-fit: cover;
+  pointer-events: none;
+  user-select: none;
 }
 
-.user-text {
-  background: rgba(255, 255, 255, 0.7);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(4.5px);
-  -webkit-backdrop-filter: blur(4.5px);
-  width: 520px;
-  height: 270px;
+.content {
   position: absolute;
   left: 0;
   top: 50%;
   transform: translateY(-50%);
-  border-radius: 10px;
+  width: 520px;
+  height: 270px;
   color: #4d4352;
+  background: rgba(255, 255, 255, 0.7);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4.5px);
+  -webkit-backdrop-filter: blur(4.5px);
+  border-radius: 10px;
   padding: 45px;
   z-index: 2;
+  user-select: none;
 }
 
-.user-text p {
-  font-size: 18px;
-  line-height: 24px;
+.content p {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.3;
 }
 
-.user-text h2 {
-  margin: 35px 0 5px;
+.content h2 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-top: 35px;
   color: #4d4352;
 }
 
@@ -112,10 +121,73 @@ main h1 {
 }
 
 .btn.active {
-  width: 45px;
+  width: 30px;
 }
 
-.testimonial {
+.slider {
   width: 100%;
   overflow: hidden;
+}
+
+@media (max-width: 850px) {
+  main {
+    width: 500px;
+  }
+
+  .slide-row {
+    width: 2000px;
+  }
+
+  .slide-col {
+    width: 500px;
+    height: 250px;
+  }
+
+  .hero img {
+    width: 200px;
+  }
+
+  .content {
+    width: 320px;
+    height: 200px;
+    padding: 20px;
+  }
+
+  .content p {
+    font-size: 0.9rem;
+  }
+
+  .content h2 {
+    font-size: 1.2rem;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 550px) {
+  main {
+    width: 300px;
+  }
+
+  .slide-row {
+    width: 1200px;
+  }
+
+  .slide-col {
+    width: 500px;
+    height: 300px;
+  }
+
+  .hero {
+    top: 60%;
+    height: 100px;
+    z-index: 5;
+  }
+
+  .hero img {
+    width: 100px;
+  }
+
+  .content {
+    width: 300px;
+  }
 }
