--- a/stacked-cards-with-autoplay/style.css
+++ b/stacked-cards-with-autoplay/style.css
@@ -27,6 +27,7 @@ main {
 .content {
   padding-left: 120px;
   color: #c7c7c7c9;
+  user-select: none;
 }
 
 .content h1 {
@@ -108,6 +109,7 @@ main {
   border-radius: inherit;
   object-fit: cover;
   transition: transform 0.4s;
+  pointer-events: none;
 }
 
 .card:nth-last-child(n + 5) {
