--- a/music-player-with-slider/style.css
+++ b/music-player-with-slider/style.css
@@ -61,9 +61,8 @@ body {
   height: 100%;
   border-radius: inherit;
   -webkit-box-reflect: below -5px linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.4));
-  transform-origin: center;
-  transform: perspective(800px);
-  transition: 0.3s ease-out;
+  user-select: none;
+  pointer-events: none;
 }
 
 .swiper-slide-active .overlay {
@@ -73,7 +72,7 @@ body {
   position: absolute;
   inset: 0;
   width: 100%;
-  height: 98%;
+  height: 100%;
   background-color: rgba(28, 22, 37, 0.6);
   border-radius: inherit;
   opacity: 0;
