added margin-bottom to the playlist class

--- a/card-slider-music-player/style.css
+++ b/card-slider-music-player/style.css
@@ -386,6 +386,10 @@ main:hover::before {
     overflow-x: hidden;
   }
 
+  .playlist {
+    margin-bottom: 50px;
+  }
+
   .slider-playlist {
     grid-template-columns: 100%;
   }
